deploy/ekszen/templates/nginx_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx
  labels:
    tier: backend
    app: nginx
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
     # nodePort: 32380
  selector:
    tier: backend
    app: nginx
  type: NodePort
